--- a/src/components/Navbar.css
+++ b/src/components/Navbar.css
@@ -19,7 +19,7 @@
 }
 
 .navbar-logo {
-  color: rgb(131, 250, 180);
+  color: #fff;
   justify-self: start;
   margin-left: 20px;
   cursor: pointer;
@@ -48,10 +48,9 @@
 .nav-item {
   height: 80px;
 }
-# 0ABAB5 : tiffany blue
 
 .nav-links {
-  color: #0ABAB5;
+  color: #fff;
   display: flex;
   align-items: center;
   text-decoration: none;
