--- a/src/components/MainSection.css
+++ b/src/components/MainSection.css
@@ -1,13 +1,5 @@
-video {
-  object-fit: cover;
-  width: 100%;
-  height: 100%;
-  position: fixed;
-  z-index: -1;
-}
-
 .hero-container {
-  /* background: url('/images/img-home.jpg') center center/cover no-repeat; */
+  background-image: url('../images/img-0.png');
   height: 100vh;
   width: 100%;
   display: flex;
@@ -16,11 +8,14 @@ video {
   align-items: center;
   box-shadow: inset 0 0 0 1000px rgba(0, 0, 0, 0.2);
   object-fit: contain;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
 }
 
-.hero-container > h1 {
+.hero-container > h3 {
   color: #fff;
-  font-size: 100px;
+  font-size: 45px;
   margin-top: -100px;
 }
 
@@ -44,7 +39,7 @@ video {
   margin-left: 5px;
 }
 
-@media screen and (max-width: 960px) {
+/* @media screen and (max-width: 960px) {
   .hero-container > h1 {
     font-size: 70px;
     margin-top: -150px;
@@ -69,4 +64,4 @@ video {
   .btn {
     width: 100%;
   }
-}
+} */
