--- a/src/components/MainSection.css
+++ b/src/components/MainSection.css
@@ -6,22 +6,21 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  box-shadow: inset 0 0 0 1000px rgba(0, 0, 0, 0.2);
-  object-fit: contain;
+  object-fit: cover;
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
 }
 
 .hero-container > h3 {
-  color: #fff;
+  color: rgb(104, 89, 241);
   font-size: 45px;
   margin-top: -100px;
 }
 
 .hero-container > p {
   margin-top: 8px;
-  color: #fff;
+  color: rgb(104, 89, 241);
   font-size: 32px;
   font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande',
     'Lucida Sans', Arial, Helvetica, sans-serif;
