--- a/src/components/Navbar.css
+++ b/src/components/Navbar.css
@@ -1,13 +1,13 @@
 .navbar {
-  background: linear-gradient(90deg, rgb(28, 27, 27) 0%, rgb(26, 23, 23) 100%);
+  background: linear-gradient(90deg, rgb(1, 26, 250) 0%, rgb(103, 93, 248) 100%);
   height: 90px;
   display: flex;
   justify-content: center;
   align-items: center;
   font-size: 1.2rem;
-  position: sticky;
+  position: static;
   top: 0;
-
+  z-index: 1
 }
 
 .navbar-container {
