--- a/src/components/MainSection.css
+++ b/src/components/MainSection.css
@@ -1,5 +1,5 @@
 .hero-container {
-  background-image: url('../images/img-0.png');
+  background-image: url('../images/cleaning-2.jpeg');
   height: 90vh;
   width: 100%;
   display: flex;
@@ -9,12 +9,12 @@
   object-fit: cover;
   background-position: center;
   background-repeat: no-repeat;
-  background-size: contain;
+  background-size: 100% 100%;
   text-shadow: 2px 2px #0026ffdc;
 }
 
 .hero-container > h3 {
-  color: rgb(8, 235, 76);
+  color: rgb(104, 4, 51);
   font-size: 45px;
   margin-top: -100px;
 }
