--- a/src/components/Navbar.css
+++ b/src/components/Navbar.css
@@ -1,5 +1,5 @@
 .navbar {
-  background: linear-gradient(90deg, rgb(1, 26, 250) 0%, rgb(103, 93, 248) 100%);
+  /* background: linear-gradient(90deg, rgb(1, 26, 250) 0%, rgb(103, 93, 248) 100%); */
   height: 90px;
   display: flex;
   justify-content: center;
@@ -19,7 +19,7 @@
 }
 
 .navbar-logo {
-  color: #fff;
+  color: rgb(27, 14, 99);
   justify-self: start;
   margin-left: 20px;
   cursor: pointer;
@@ -50,7 +50,7 @@
 }
 
 .nav-links {
-  color: #fff;
+  color:  rgb(27, 14, 99);
   display: flex;
   align-items: center;
   text-decoration: none;
@@ -59,12 +59,12 @@
 }
 
 .nav-links:hover {
-  border-bottom: 4px solid #fff;
+  border-bottom: 4px solid  rgb(27, 14, 99);
   transition: all 0.2s ease-out;
 }
 
 .fa-bars {
-  color: #fff;
+  color:  rgb(27, 14, 99);
 }
 
 .nav-links-mobile {
@@ -108,7 +108,7 @@
   }
 
   .nav-links:hover {
-    background-color: #fff;
+    background-color:  rgb(27, 14, 99);
     color: #242424;
     border-radius: 0;
   }
