changed the size of cards.

--- a/src/components/Cards.css
+++ b/src/components/Cards.css
@@ -1,6 +1,6 @@
 .cards {
   padding: 2rem;
-  background: rgb(151, 182, 160);
+  background: rgb(188, 229, 248);
 }
 
 h1 {
@@ -14,11 +14,13 @@ h1 {
   max-width: 1120px;
   width: 90%;
   margin: 0 auto;
+  
 }
 
 .cards__wrapper {
   position: relative;
-  margin: 50px 0 45px;
+  margin: 10px 0 45px;
+  width: 80%;
 }
 
 .cards__items {
@@ -39,7 +41,6 @@ h1 {
   box-shadow: 0 6px 20px rgba(56, 125, 255, 0.17);
   -webkit-filter: drop-shadow(0 6px 20px rgba(56, 125, 255, 0.017));
   filter: drop-shadow(0 6px 20px rgba(56, 125, 255, 0.017));
-  border-radius: 10px;
   overflow: hidden;
   text-decoration: none;
 }
@@ -66,7 +67,6 @@ h1 {
   font-size: 12px;
   font-weight: 700;
   color: #fff;
-  background-color: #1f98f4;
   box-sizing: border-box;
 }
 
@@ -83,6 +83,7 @@ h1 {
   max-height: 100%;
   object-fit: cover;
   transition: all 0.2s linear;
+  border-radius: 10px;
 }
 
 .cards__item__img:hover {
