--- a/src/components/Button.css
+++ b/src/components/Button.css
@@ -18,9 +18,11 @@
 
 .btn--outline {
   background-color: transparent;
-  color: #fff;
+  color: rgb(82, 126, 146);
   padding: 8px 29px;
-  border: 1px solid var(--primary);
+  /* border: 1px solid var(--primary); */
+  border: 2px solid rgb(82, 126, 146);
+  border-radius: 10px 0 10px 0;
   transition: all 0.3s ease-out;
 }
 
