--- a/src/components/Navbar.css
+++ b/src/components/Navbar.css
@@ -1,13 +1,14 @@
 .navbar {
   /* background: linear-gradient(90deg, rgb(1, 26, 250) 0%, rgb(103, 93, 248) 100%); */
-  height: 90px;
+  height: 70px;
   display: flex;
   justify-content: center;
   align-items: center;
   font-size: 1.2rem;
   position: static;
   top: 0;
-  z-index: 1
+  z-index: 1;
+  color: red;
 }
 
 .navbar-container {
@@ -148,6 +149,7 @@
     padding: 14px 20px;
     border: 1px solid #fff;
     transition: all 0.3s ease-out;
+    
   }
 
   .nav-links-mobile:hover {
